Fixed issue with mountains not being at the bottom of the browser when the admin bar isn't visible

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -15,6 +15,10 @@ body {
     min-height: calc(100dvh - 46px);
     overflow-x: hidden;
   }
+
+  &.admin-bar div#siteWrapper {
+    min-height: 100dvh;
+  }
 }
 
 p {
